--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url  "http://dl.bintray.com/niqdev/maven"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.3.1'
