5/16 Finish all features

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.github.niqdev:mjpeg-view:1.1.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'com.google.code.gson:gson:2.4'
     testCompile 'junit:junit:4.12'
 }
 
